--- a/Resources/Locator.properties
+++ b/Resources/Locator.properties
@@ -59,7 +59,7 @@ CategorypageTitle=Gearing | KamanDirect
 ProductList=//*[@id="atg_store_prodList"]/div[2]/div/a[1]/div/p[1]/img
 Productsublist=//*[@id="atg_store_prodList"]/div[2]/div/a[1]/div/p[1]/img
 ProductPLP=/html/body/div[1]/div[1]/div[5]/div[2]/div/div[2]/div[2]/div/div/div/div[1]/div[3]/div/div[1]/div/div/a/img
-PLPAddtocart=/html/body/div[1]/div[1]/div[5]/div[2]/div/div[2]/div[2]/div/div/div/div[1]/div[3]/div/div[1]/div/form/div[4]/div[3]/span/input[1]
+PLPAddtocart=/html/body/div[1]/div[1]/div[5]/div[2]/div/div[2]/div[2]/div/div/div/div[1]/div[3]/div/div[2]/div/form/div[4]/div[3]/span/input[1]
 PDPAddtoCart=//*[@id="atg_behavior_addItemToCart"]
 PDPProductHeader=//*[@id="atg_store_contentHeader"]/h2
 PDPBreadcrumbs=//*[@id="atg_store_breadcrumbs"]
@@ -82,8 +82,8 @@ PDPStoreroomOPT=//*[@id="moreactions1"]/li[1]/div/div/ul/li[9]/input[2]
 EditStoreroom=//*[@id="atg_store_contentHeader"]/h2
 SaveStoreroomchangesbutton=//*[@id="atg_store_giftListSubmit"]
 message=//*[@id="atg_store_myAccountNav"]
-PDPComaparision1=/html/body/div[1]/div[1]/div[5]/div[2]/div/div[2]/div[2]/div/div/div/div[1]/div[3]/div/div[1]/div/form/div[3]/div[2]/div/ul/li[2]/input[7]
-PDPComaparision2=/html/body/div[1]/div[1]/div[5]/div[2]/div/div[2]/div[2]/div/div/div/div[1]/div[3]/div/div[2]/div/form/div[3]/div[2]/div/ul/li[2]/input[7]
+PDPComaparision1=/html/body/div[1]/div[1]/div[5]/div[2]/div/div[2]/div[2]/div/div/div/div[1]/div[3]/div/div[2]/div/form/div[3]/div[2]/div/ul/li[2]/input[7]
+PDPComaparision2=/html/body/div[1]/div[1]/div[5]/div[2]/div/div[2]/div[2]/div/div/div/div[1]/div[3]/div/div[3]/div/form/div[3]/div[2]/div/ul/li[2]/input[7]
 ComaparisonPageHeader=//*[@id="atg_store_content"]/div[1]/h3
 CompareProducts=//*[@id="moreactions1"]/li[2]/a
 ProductdetailsComparisionTable=//*[@id="product_comparison_table"]
@@ -140,6 +140,7 @@ RegistrationPass=//*[@id="atg_store_registerPassword"]
 RegistrationConfirmPass=//*[@id="atg_store_registerRetypePassword"]
 RegistrationZip=//*[@id="atg_store_registerShipAddrZip"]
 ExistingaccNObutton=//*[@id="atg_store_registration"]/div[4]/div[2]/label[2]/input[1]
+Acctype=//input[@name='registrationType' and @value='1']
 T&CCHeckbox=//*[@id="regCheckbox"]
 RegistrationSubmit=//*[@id="atg_store_createMyAccount"]
 RegistrationSuccessMSG=//*[@id="atg_store_content"]/div[4]/div[1]/div/div/dl/div[2]/dd
