--- a/Resources/Locator.properties
+++ b/Resources/Locator.properties
@@ -22,7 +22,7 @@ PaymentInfo=//*[@id="atg_store_locale"]/div/ul/li[2]/ul/li[2]/a
 PaymentInfoHeader=//*[@id="atg_store_contentHeader"]/div/h2
 AddressBook=//*[@id="atg_store_locale"]/div/ul/li[2]/ul/li[3]/a
 Addressbookheader=//*[@id="atg_store_contentHeader"]/div/h2
-AddressbookButton=//*[@id="atg_store_addressBookDefault"]/div[3]/a/span
+AddressbookButton=//*[@id="atg_store_addressBookDefault"]
 Orders=//*[@id="atg_store_locale"]/div/ul/li[2]/ul/li[4]/a
 OrdersHeader=//*[@id="atg_store_contentHeader"]/h2
 Invoices=//*[@id="atg_store_locale"]/div/ul/li[2]/ul/li[5]/a
