Domain for Punchout testcase

--- a/GetAppData.properties
+++ b/GetAppData.properties
@@ -1,3 +1,8 @@
 PunchOutURL=
-BaseURL=https://ectest.kamandirect.com/storeus/
 PunchOutLocalURL=http://192.168.15.145/punchouttest.html
+Registered_Username=archanamithoor@gmail.com
+Registered_Password=kaman123
+Managed_Username=bep-dvlp@kaman.com
+Managed_Password=bep999
+BaseURL=https://ectest.kamandirect.com/storeus/
+Suite=SanityECTEST
