--- a/Resources/UserConfig.properties
+++ b/Resources/UserConfig.properties
@@ -2,7 +2,7 @@ Site=Kaman
 Suite=Sanity
 Domain=https://ectest.kamandirect.com/
 OS=windows
-Screenshots=No
+Screenshots=Yes
 Excel_Reports=Yes
 Historical_Reports=Yes
 
