--- a/Resources/Locator.properties
+++ b/Resources/Locator.properties
@@ -175,3 +175,43 @@ ResSubProducts=//*[@id="mm-2"]/ul/li[2]/a[1]
 ReschildProd=//*[@id="mm-6"]/ul/li[2]/a[1]
 ResPLP=//*[@id="mm-8"]/ul/li[2]/a
 TopArrow=//*[@id="back-to-top"]/img
+Products=//*[@id="atg_store_catNav"]/li[1]/a
+ShaftMount=Shaft-Mount Torque Arm Reducer
+SWormReducer=//*[@id="atg_store_prodList"]/div[2]/div/a[1]/div/span
+AddtoCart1=//*[@id="atg_behavior_addItemToCart"]
+AddtoCart2=//*[@id="atg_behavior_addItemToCart"]
+Service=/html/body/div[1]/div[1]/div[6]/div[1]/div/nav/div/ul/li[3]/a
+login=//*[@id="anonymousDesktopDescription"]/a[1]
+email=//*[@id="atg_store_registerLoginEmailAddress1"]
+password=//*[@id="atg_store_registerLoginPassword1"]
+loginbutton=//*[@id="atg_store_loginButton1"]
+item1=TXT425T_TORQUE-ARM SPD RDCR,TPR BUSH
+item1add=/html/body/div[1]/div[1]/div[5]/div[2]/div/div/div[2]/div[2]/div/div/form/div[3]/div[2]/div[2]/span/input[1]
+item2=TXT415T_TORQUE-ARM SPD RDCR,TPR BUSH
+item3=TA3203H25_TA TAPER BUSH REDUCER
+item4=BIO DDR KIT_BIO DISC REDUCER V-DRIVE KIT
+Category1=Mechanical Variable Speed Belt Drive
+item5=963763_188D UNIVERSAL BELT GUARD ASSY
+item6=259168_188D BIO DISC REDUCER ASSEMBLY
+Electrical=Electrical & Automation
+Category2=Contactor, Fusing, Circuit Protection
+Category21=Other Circuit Protection
+item7=Minarik Drives (American Control Electronics) PCM4
+item8=Y92S41200_DISCRETE OUTPUT CABLE
+item9=E32TC1000_10 METER CABLE
+item10=Omron 16 Output Direct Current (DC) Output Block
+Linear=Linear Motion
+Category3=Ball Bushing Accessories
+item11=S625_SEAL
+item12=OPNS750_OPEN TYPE SEAL
+item13=S375_BALL BUSHING SEAL
+Category31=Other Linear Ball Bushing
+item14=Thomson Linear Motion Linear Bearing - Roller Bearing - RoundWay - Dual Type - 1.5 in - Open - Single - Self-aligning - Precision I.D.
+item15=C12_PLUG FOR SR55/HSR45 [C]
+item16=L45800005-003_LINEAR GUIDE RAIL CAP
+item17=C5_PLUG FOR SR20/HSR20 [C]
+Category32=Ball Bushing Bearing
+item18=Thomson Linear Motion Linear Bearing - Ball Bushing only - Precision Steel - 0.75 in - Closed - Not Self-aligning - A Grade
+item19=Thomson Linear Motion Linear Bearing - Ball Bushing only - Super - 1 in - Closed - Self-aligning - Adjustable
+item20=Thomson Linear Motion Linear Bearing - Ball Bushing only - Precision Steel - 0.5 in - Closed - Not Self-aligning - A Grade
+item21=Thomson Linear Motion Linear Bearing - Ball Bushing only - Precision Steel - 1 in - Closed - Not Self-aligning - A Grade
